# react-native-flexible-http

./: .gitmodules  CONTRIBUTING.md  README.md  package.json  react-native-flexible-http.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnativeflexiblehttp/: FlexibleHttpModule.java  FlexibleHttpPackage.java
cpp/: react-native-flexible-http.cpp  react-native-flexible-http.h
example/: app.json  package.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/reactnativeflexiblehttp/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/reactnativeflexiblehttp/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/: File.swift  Podfile  dumbswift.swift
example/ios/FlexibleHttpExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/FlexibleHttpExample.xcodeproj/: project.pbxproj
example/ios/FlexibleHttpExample.xcodeproj/xcshareddata/xcschemes/: FlexibleHttpExample.xcscheme
example/ios/FlexibleHttpExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: FlexibleHttp.h  FlexibleHttp.mm
ios/FlexibleHttp.xcodeproj/: project.pbxproj
src/: index.tsx
